# django-training

./: .env.example  .gitignore  conftest.py  pyproject.toml  pytest.ini
albums/: admin.py  filters.py  forms.py  models.py  paginations.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_isapproved.py  0002_initial.py  0003_remove_album_isapproved_album_is_approved.py  0004_remove_album_creation_date_album_created_and_more.py  0005_song.py
albums/templates/albums/: create.html
albums/tests/: test_endpoints.py  test_serializers.py
artists/: admin.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_options.py  0002_initial.py
artists/templates/artists/: create.html  index.html
artists/tests/: test_index_endpoint.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_login_endpoint.py  test_logout_endpoint.py  test_register_endpoint.py
musicplatform/: RESULTS.md  celery.py  settings.py  urls.py
templates/registration/: login.html
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_bio.py
users/tests/: test_detail_endpoint.py  test_endpoints.py
