[tool.poetry]
name = "djangomusicapp"
version = "0.1.0"
description = ""
authors = ["AbdullahHafez <abdullah.alaa12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-model-utils = "^4.2.0"
django-imagekit = "^4.1.0"
Pillow = "^9.2.0"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
django-extensions = "^3.2.1"
django-rest-knox = "^4.2.0"
pytest-django = "^4.5.2"
celery = {extras = ["redis"], version = "^5.2.7"}
django-environ = "^0.9.0"
gevent = "^22.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
